# matrix

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
content/pages/: about.md
content/posts/: deepseek_v4_speculations.md  hello-world.md  the_people_deserve_better.md  the_quiet_beauty_of_native_code.md
deploy/: Caddyfile  docker-compose.prod.yml
server/: Cargo.toml
server/src/: app.rs  lib.rs  main.rs  watcher.rs
server/src/content/: cache.rs  loader.rs  mod.rs  parser.rs
server/src/routes/: index.rs  mod.rs  pages.rs  posts.rs  seo.rs  tags.rs
server/src/templates/: mod.rs
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html  page.html  post.html
