[package]
name = "matrix-blog"
version = "0.1.0"
edition = "2021"
authors = ["Matrix Blog"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
parking_lot = "0.12"
thiserror = "2"

[dev-dependencies]
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "matrix-blog"
path = "src/main.rs"
